--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -667,19 +667,19 @@
         "1634268015": true,
         "1634268016": true
       },
-      "允许这些人透过QQ执行伪命令":{
-        "1634268014":{
-          "开心一下":[
+      "允许这些人透过QQ执行伪命令": {
+        "1634268014": {
+          "开心一下": [
             "scoreboard players add @a coin [args]",
             "say 每人白给 [args] 金币！"
           ],
-          "不开心一下":[
+          "不开心一下": [
             "scoreboard players remove @a coin [args]",
             "say 每人倒扣 [args] 金币！"
           ]
         },
-        "23333333333":{
-          "传送":[
+        "23333333333": {
+          "传送": [
             "tp [args]"
           ]
         }
@@ -812,9 +812,7 @@
         }
       ]
     },
-    "强制修改菜单信息":{
-      
-    }
+    "强制修改菜单信息": {}
   },
   {
     "名称": "计划任务",
@@ -973,8 +971,8 @@
     "配置": {
       "提示信息": "你 [player] 逝于 [dead_pos]，要重返那里么?",
       "询问是否返回死亡点": true,
-      "死亡玩家选择器":"@a[name=[player]]",
-      "复活时执行指令":[]
+      "死亡玩家选择器": "@a[name=[player]]",
+      "复活时执行指令": []
     }
   },
   {
@@ -1408,8 +1406,8 @@
       "签到时间偏移": "3h",
       "当玩家一天内重复签到时提示": "达咩，不可以重复签到",
       "玩家签到信息记录文件": "签到记录.json",
-      "玩家登录延迟":20,
-      "提醒玩家签到的消息":"@[player] 今日还未签到，记得签到喔",
+      "玩家登录延迟": 20,
+      "提醒玩家签到的消息": "@[player] 今日还未签到，记得签到喔",
       "为true时被动签到false时主动签到": false,
       "触发词": [
         "签到",
@@ -1489,8 +1487,13 @@
     "来源": "Built-In",
     "配置": {
       "修复速度": 2,
-      "触发词":["修复"],
-      "授权使用者":["2401PT","2402PT"]
+      "触发词": [
+        "修复"
+      ],
+      "授权使用者": [
+        "2401PT",
+        "2402PT"
+      ]
     }
   },
   {
@@ -1500,9 +1503,14 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-      "触发词":["小木斧"],
-      "授权使用者":["2401PT","一碗飯飯"],
-      "使用LargeFill功能":false
+      "触发词": [
+        "小木斧"
+      ],
+      "授权使用者": [
+        "2401PT",
+        "一碗飯飯"
+      ],
+      "使用LargeFill功能": false
     }
   },
   {
@@ -1512,72 +1520,72 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-        "数据文件": "玩家商店.json",
-        "登录时延迟发送": 20,
-        "售卖触发词": [
-            "卖东西"
-        ],
-        "售卖提示信息": "卖出自己的东西",
-        "购买触发词": [
-            "玩家商店"
-        ],
-        "购买提示信息": "从玩家商店购买东西",
-        "打开售卖菜单前执行的指令": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6售卖东西需要缴纳一部分费用\"}]}",
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6正在检查你是否有足够的余额\"}]}"
-        ],
-        "售卖条件选择器": "@a[name=[player],scores={coin=100..}]",
-        "没有售卖权限时执行的指令": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6很遗憾，你的余额不够\"}]}",
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6至少需要 100 金币才能卖东西\"}]}"
-        ],
-        "售卖指导指令1": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6首先输入要出售的物品名\"}]}"
-        ],
-        "默认货币": {
-            "记分板名": "coin",
-            "货币名": "金币"
+      "数据文件": "玩家商店.json",
+      "登录时延迟发送": 20,
+      "售卖触发词": [
+        "卖东西"
+      ],
+      "售卖提示信息": "卖出自己的东西",
+      "购买触发词": [
+        "玩家商店"
+      ],
+      "购买提示信息": "从玩家商店购买东西",
+      "打开售卖菜单前执行的指令": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6售卖东西需要缴纳一部分费用\"}]}",
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6正在检查你是否有足够的余额\"}]}"
+      ],
+      "售卖条件选择器": "@a[name=[player],scores={coin=100..}]",
+      "没有售卖权限时执行的指令": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6很遗憾，你的余额不够\"}]}",
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6至少需要 100 金币才能卖东西\"}]}"
+      ],
+      "售卖指导指令1": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6首先输入要出售的物品名\"}]}"
+      ],
+      "默认货币": {
+        "记分板名": "coin",
+        "货币名": "金币"
+      },
+      "可选择的货币": [
+        {
+          "记分板名": "银",
+          "货币名": "银币"
         },
-        "可选择的货币": [
-            {
-                "记分板名": "银",
-                "货币名": "银币"
-            },
-            {
-                "记分板名": "铜",
-                "货币名": "铜币"
-            }
-        ],
-        "售卖指导指令2": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6然后，输入物品的价格(如 100 金币/银币)\"}]}"
-        ],
-        "售卖指导指令3": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6把要买的东西丢在周围三格，完成后在聊天栏里输入任意信息\"}]}"
-        ],
-        "结构方块前导名": "OMEs",
-        "打包平台": [
-            0,
-            145,
-            0
-        ],
-        "物品转移器": "execute [player] ~~~ tp @e[type=item,r=3] 0 145 0",
-        "所得税": 0.3,
-        "放入玩家商店时的指令": [
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6你的物品 [商品] 将被放入玩家商店\"}]}",
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§b商品价格为 [价格][货币名]([货币计分板名]), 去除 30% 的所得税 ([所得税][货币名]), 在售出时，总计获得 [实际收益][货币名]\"}]}",
-            "/tellraw [player] {\"rawtext\":[{\"text\":\"§6此外，我们现在将收取 100 金币 作为手续费\"}]}",
-            "scoreboard players remove [player] coin 100"
-        ],
-        "每页最多显示商品数":15,
-        "物品清单开头":    "§b§l==============================有这些商品在售===============================",
-        "还有下一页时末尾":"§b§l=============================还有商品在下一页==============================",
-        "物品清单结尾提示":"§b§l==============================商品清单到此为止=============================",
-        "物品渲染格式":"[I]: §l§6[商品] §f§r出售者: [出售者] 总价:[价格][货币名]/[货币计分板名]",
-        "成功售出时的加钱指令":[
-            "/tellraw [出售者] {\"rawtext\":[{\"text\":\"§6[购买者] 购买了你的商品 [商品]\"}]}",
-            "/tellraw [出售者] {\"rawtext\":[{\"text\":\"§6从售价 [价格] 中除去所得税 [所得税], 你实际获得 [实际收益] [货币名]\"}]}",
-            "scoreboard players add [出售者] [货币计分板名] [实际收益]"
-        ]
+        {
+          "记分板名": "铜",
+          "货币名": "铜币"
+        }
+      ],
+      "售卖指导指令2": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6然后，输入物品的价格(如 100 金币/银币)\"}]}"
+      ],
+      "售卖指导指令3": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6把要买的东西丢在周围三格，完成后在聊天栏里输入任意信息\"}]}"
+      ],
+      "结构方块前导名": "OMEs",
+      "打包平台": [
+        0,
+        145,
+        0
+      ],
+      "物品转移器": "execute [player] ~~~ tp @e[type=item,r=3] 0 145 0",
+      "所得税": 0.3,
+      "放入玩家商店时的指令": [
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6你的物品 [商品] 将被放入玩家商店\"}]}",
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§b商品价格为 [价格][货币名]([货币计分板名]), 去除 30% 的所得税 ([所得税][货币名]), 在售出时，总计获得 [实际收益][货币名]\"}]}",
+        "/tellraw [player] {\"rawtext\":[{\"text\":\"§6此外，我们现在将收取 100 金币 作为手续费\"}]}",
+        "scoreboard players remove [player] coin 100"
+      ],
+      "每页最多显示商品数": 15,
+      "物品清单开头": "§b§l==============================有这些商品在售===============================",
+      "还有下一页时末尾": "§b§l=============================还有商品在下一页==============================",
+      "物品清单结尾提示": "§b§l==============================商品清单到此为止=============================",
+      "物品渲染格式": "[I]: §l§6[商品] §f§r出售者: [出售者] 总价:[价格][货币名]/[货币计分板名]",
+      "成功售出时的加钱指令": [
+        "/tellraw [出售者] {\"rawtext\":[{\"text\":\"§6[购买者] 购买了你的商品 [商品]\"}]}",
+        "/tellraw [出售者] {\"rawtext\":[{\"text\":\"§6从售价 [价格] 中除去所得税 [所得税], 你实际获得 [实际收益] [货币名]\"}]}",
+        "scoreboard players add [出售者] [货币计分板名] [实际收益]"
+      ]
     }
   },
   {
@@ -1591,18 +1599,18 @@
         "tellraw @a  {\"rawtext\":[{\"text\":\"§6[player] 将被封禁 [day]天[hour]时[min]分[sec]秒\"}]}",
         "scoreboard players set [player] 封禁时间 0"
       ],
-      "踢出指令":[
+      "踢出指令": [
         "kick [player] 你已被封禁 [day]天[hour]时[min]分[sec]秒"
       ],
-      "到达封禁时间Omega结束接管时指令":[
+      "到达封禁时间Omega结束接管时指令": [
         "tellraw [player] {\"rawtext\":[{\"text\":\"§6你的封禁已经结束，下次请好好做人\"}]}"
       ],
-      "延迟踢出时间":5,
-      "登录时延迟发送":20,
-      "读取封禁时间的计分板名":"封禁时间",
-      "检查周期":  3,
+      "延迟踢出时间": 5,
+      "登录时延迟发送": 20,
+      "读取封禁时间的计分板名": "封禁时间",
+      "检查周期": 3,
       "选择器": "@a[scores={封禁时间=1..}]",
-      "文件名":"封禁时间记录.json"
+      "文件名": "封禁时间记录.json"
     }
   },
   {
@@ -1612,15 +1620,15 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-      "清除规则":{
-        "smithing_table":{
-          "处理指令":[
+      "清除规则": {
+        "smithing_table": {
+          "处理指令": [
             "setblock [x] [y] [z] sealantern",
             "tell @a[m=c] 已移除 [x] [y] [z] 的锻造台"
           ]
         },
-        "movingBlock":{
-          "处理指令":[
+        "movingBlock": {
+          "处理指令": [
             "setblock [x] [y] [z] commandblock",
             "setblock [x] [y] [z] bedrock",
             "tell @a[m=c] 已移除 [x] [y] [z] 的movingBlock (可能误封)"
@@ -1636,7 +1644,10 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-      "后台触发词": ["load","导入"],
+      "后台触发词": [
+        "load",
+        "导入"
+      ],
       "每秒导入普通方块数目": 600,
       "断点续导记录文件": "断点续导.json",
       "Omega启动时是否自动继续导入": true,
@@ -1646,7 +1657,7 @@
   {
     "名称": "第三方_by温柔_地皮组件",
     "描述": " 地皮白名单有且仅有99名额",
-    "是否禁用":  true,
+    "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
@@ -1661,13 +1672,12 @@
         "购买地皮时检测指令": "testfor @a[name=\"[购买地皮的人]\",scores={[货币计分板]=[地皮价格]..}]",
         "购买地皮指令检测失败后提示": "[购买地皮的人] 你[货币计分板]余额不足",
         "提示确认地皮大小提示词": "领地的大小为：[地皮大小] \n消耗[购买地皮计分板][价格]\n确定购买吗？（y/n）",
-        "自定义购买时提示输入地皮大小" :"[购买对象] 请输入所需要地皮大小 格式【dx】 【dy】\n比如你要50x50的地皮则输入:50 50 请记住50与50之间需要空格\n价格:\n占地面积每格[每格价格]",
-        "删除地皮成功提示":"成功删除自己地皮",
-        "删除白名单成功提示":"你已经成功删除[删除对象]"
-        
+        "自定义购买时提示输入地皮大小": "[购买对象] 请输入所需要地皮大小 格式【dx】 【dy】\n比如你要50x50的地皮则输入:50 50 请记住50与50之间需要空格\n价格:\n占地面积每格[每格价格]",
+        "删除地皮成功提示": "成功删除自己地皮",
+        "删除白名单成功提示": "你已经成功删除[删除对象]"
       },
       "扣除货币的积分板": "can",
-      "购买地皮时执行的指令":[
+      "购买地皮时执行的指令": [
         "title @a[name=\"[购买对象名字]\"] actionbar 已扣除你[货币计分板] [价格]",
         "scoreboard players remove @a[name=\"[购买对象名字]\"] [货币计分板] [价格]"
       ],
@@ -1675,7 +1685,7 @@
         "gamemode 2 @a[[非地皮合法进入者],[地皮范围],m=0]",
         "title @a[[地皮范围]] actionbar 你已经进入地皮内\n地皮主人:[地皮主人]\n地皮坐标x:[地皮起点x],y:-60(暂不可变动),z:[地皮起点z]\n范围向x:[地皮dx],z:[地皮dz] "
       ],
-      "执行地皮保护指令延迟(毫秒)":500,
+      "执行地皮保护指令延迟(毫秒)": 500,
       "提示信息": "地皮系统",
       "是否开启自定义地皮大小": true,
       "每格价格": 1,
@@ -1696,29 +1706,28 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-        "玩家数据文件":"OmegaSide玩家数据文件.json",
-        "如果可以则使用这个http端口": "localhost:24011",
-        "只打开用于开发的Websocket端口而不启动任何插件":false,
-        "使用Omega标准Python插件框架":true,
-        "使用DotCS社区版插件运行模拟器":true,
-        "python解释器搜索路径":[
-            "interpreters/python/bin/python",
-            "/data/data/com.termux/files/usr/bin/python"
-        ],
-        "启动其他旁加载程序的指令": [
-        ],
-        "启动其他旁加载程序的指令的例子": [
-            {
-                "旁加载功能名": "其他类型插件1",
-                "启动指令": "node example1.js [addr]",
-                "变更选项": {}
-            },
-            {
-                "旁加载功能名": "其他类型插件2",
-                "启动指令": "插件.exe",
-                "变更选项": {}
-            }
-        ]
+      "玩家数据文件": "OmegaSide玩家数据文件.json",
+      "如果可以则使用这个http端口": "localhost:24011",
+      "只打开用于开发的Websocket端口而不启动任何插件": false,
+      "使用Omega标准Python插件框架": true,
+      "使用DotCS社区版插件运行模拟器": true,
+      "python解释器搜索路径": [
+        "interpreters/python/bin/python",
+        "/data/data/com.termux/files/usr/bin/python"
+      ],
+      "启动其他旁加载程序的指令": [],
+      "启动其他旁加载程序的指令的例子": [
+        {
+          "旁加载功能名": "其他类型插件1",
+          "启动指令": "node example1.js [addr]",
+          "变更选项": {}
+        },
+        {
+          "旁加载功能名": "其他类型插件2",
+          "启动指令": "插件.exe",
+          "变更选项": {}
+        }
+      ]
     }
   },
   {
@@ -1727,9 +1736,7 @@
     "是否禁用": false,
     "版本": "0.0.1",
     "来源": "Core",
-    "配置": {
-
-    }
+    "配置": {}
   },
   {
     "名称": "OP权限自检",
@@ -1737,65 +1744,68 @@
     "是否禁用": false,
     "版本": "0.0.1",
     "来源": "Core",
-    "配置": {
-
-    }
+    "配置": {}
   },
-   {
+  {
     "名称": "第三方_by温柔_公会系统",
     "描述": "当前仅有公会排名还未完善 请不要使用 其余功能均可使用 如果有bug请在群里面@风也温柔",
     "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-      "可设置公会权限的选择器":"@a[m=1]",
-      "设置公会权限触发词":"set",
-      "隐藏菜单触发词":"setop",
-      "禁止设置公会坐标":[[0,0,0]],
+      "可设置公会权限的选择器": "@a[m=1]",
+      "设置公会权限触发词": "set",
+      "隐藏菜单触发词": "setop",
+      "禁止设置公会坐标": [
+        [
+          0,
+          0,
+          0
+        ]
+      ],
       "一级保护指令": [
         "title @a[x=[x],z=[z],dx=[Dx],dz=[Dz],dy=300,y=-60] actionbar §b[领地范围内]\n§e公会名字:§f[公会名字]",
-        "gamemode 2 @a[[领地范围内非会员],x=[x],z=[z],dx=[Dx],dz=[Dz],dy=300,y=-60,m=0]"		
+        "gamemode 2 @a[[领地范围内非会员],x=[x],z=[z],dx=[Dx],dz=[Dz],dy=300,y=-60,m=0]"
       ],
       "保护延迟时间[秒]": 1,
-      "各种公会所需计分板":{
-        "权限计分板":"权限",
+      "各种公会所需计分板": {
+        "权限计分板": "权限",
         "购买公会计分板": "挖掘",
-        "银行存入计分板":"挖掘"
+        "银行存入计分板": "挖掘"
       },
-      "各种提示词":{
-        "返回地皮时提示词":"欢迎回到 [公会名字] ",
-        "无地皮时提示":"[警告] 你没有地皮",
-        "权限不足时提示":"你所在公会权限不足开启此功能",
-        "公会菜单商品显示":"[i] 商品名:[商品] 价格:[价格]",
-        "商店购买失败提示":"[错误] 余额不足",
-        "邀请对方进入公会时提示":"[公会名字] 邀请你进入公会(y/n)",
-        "管理菜单显示":"§b[会长菜单]\n§a输入 §e0 §a§l邀请他人进入公会\n§a输入 §e1 §a§l设置他人权限\n§a输入 §e2 §a§l发布公告\n§a输入 §e3 §a§l设置二级保护区域\n§a输入 §e4 §a§l踢出公会成员§e5 §a§l删除公会§e6 §a§l查看公会信息§e7 §a§l删除成员",
-        "设置公会权限菜单模板":"[i] [公会名字]",
-        "暂无公会存在时提示词":"[错误] 抱歉现在还未有任何公会存在",
-        "显示个人信息模板":"[计分板名字] : [计分板分数] ",
-        "显示个人信息菜单开头":"[个人信息菜单]\n所属公会:[公会名字]\n公会权限:[公会权限]\n本人权限:[本人权限]\n",
-        "购买领地后提示":"[成功购买公会] 你的公会名字[公会名字]\n起点坐标:[起点坐标]\n终点坐标:[终点坐标]\n中心坐标:[中心坐标]",
-        "op隐藏菜单":"[op隐藏菜单]\n输入 0 查看指定公会信息 \n输入 1 修改指定公会"
-        ,"op隐藏菜单公会详细信息显示":"[公会名字]\n会长:[会长]\n成员:[成员]\n权限:[权限]\n中心坐标:[中心坐标]\n范围:[起始坐标]----[终点坐标]"
+      "各种提示词": {
+        "返回地皮时提示词": "欢迎回到 [公会名字] ",
+        "无地皮时提示": "[警告] 你没有地皮",
+        "权限不足时提示": "你所在公会权限不足开启此功能",
+        "公会菜单商品显示": "[i] 商品名:[商品] 价格:[价格]",
+        "商店购买失败提示": "[错误] 余额不足",
+        "邀请对方进入公会时提示": "[公会名字] 邀请你进入公会(y/n)",
+        "管理菜单显示": "§b[会长菜单]\n§a输入 §e0 §a§l邀请他人进入公会\n§a输入 §e1 §a§l设置他人权限\n§a输入 §e2 §a§l发布公告\n§a输入 §e3 §a§l设置二级保护区域\n§a输入 §e4 §a§l踢出公会成员§e5 §a§l删除公会§e6 §a§l查看公会信息§e7 §a§l删除成员",
+        "设置公会权限菜单模板": "[i] [公会名字]",
+        "暂无公会存在时提示词": "[错误] 抱歉现在还未有任何公会存在",
+        "显示个人信息模板": "[计分板名字] : [计分板分数] ",
+        "显示个人信息菜单开头": "[个人信息菜单]\n所属公会:[公会名字]\n公会权限:[公会权限]\n本人权限:[本人权限]\n",
+        "购买领地后提示": "[成功购买公会] 你的公会名字[公会名字]\n起点坐标:[起点坐标]\n终点坐标:[终点坐标]\n中心坐标:[中心坐标]",
+        "op隐藏菜单": "[op隐藏菜单]\n输入 0 查看指定公会信息 \n输入 1 修改指定公会",
+        "op隐藏菜单公会详细信息显示": "[公会名字]\n会长:[会长]\n成员:[成员]\n权限:[权限]\n中心坐标:[中心坐标]\n范围:[起始坐标]----[终点坐标]"
       },
-      "显示个人信息所需计分板":{
-        "挖掘":"[贡献值]"
-  
+      "显示个人信息所需计分板": {
+        "挖掘": "[贡献值]"
       },
-      "公会初始等级":1,
+      "公会初始等级": 1,
       "最低公会等级可开启的功能": {
-        "buff加成":4,
-        "二级保护":4,
-        "传送点设置":4,
-        "商店功能":4,
-        "设置二级保护区域":4
+        "buff加成": 4,
+        "二级保护": 4,
+        "传送点设置": 4,
+        "商店功能": 4,
+        "设置二级保护区域": 4
       },
       "最低权限可使用功能": {
-        "可以t出其他成员": 3,		
+        "可以t出其他成员": 3,
         "可以发布公告": 2,
-        "可以改变他人权限":2,								
-        "可以设置二级保护区": 3,																	
-        "可以进入二级保护区域":2										
+        "可以改变他人权限": 2,
+        "可以设置二级保护区": 3,
+        "可以进入二级保护区域": 2
       },
       "二级保护指令": [
         "execute @a[scores={[权限计分板]=..[最低权限]},x=[x],y=[y],z=[z],dy=[Dy],dz=[Dz],dx=[Dx]] [x] [y] [z] tp @s ~-1~~-1",
@@ -1808,7 +1818,6 @@
         "3": "三级公会",
         "4": "四级公会"
       },
-    
       "公会菜单显示": {
         "0": "输入[i] 购买公会",
         "1": "输入[i] 返回公会",
@@ -1816,7 +1825,7 @@
         "3": "输入[i] 会长菜单",
         "4": "输入[i] 公会排行",
         "5": "输入[i] 个人信息"
-      },	
+      },
       "成员等级称呼": {
         "0": "成员",
         "1": "会员",
@@ -1829,34 +1838,44 @@
         "公会"
       ],
       "购买领地时限制器": "@a[name=[player],scores={[购买计分板]=[价格]..},m=!2]",
-      "公会保护范围":{
-        "1":[150,150],
-        "2":[200,200],
-        "3":[250,250],
-        "4":[500,500]
+      "公会保护范围": {
+        "1": [
+          150,
+          150
+        ],
+        "2": [
+          200,
+          200
+        ],
+        "3": [
+          250,
+          250
+        ],
+        "4": [
+          500,
+          500
+        ]
       },
-      "公会商店":{
-        "0":{
-          "商品名字":"a",
-          "商品英文":"a",
-          "商品价格":"200",
-          "使用的货币":"挖掘",
-          "购买时执行指令":[
+      "公会商店": {
+        "0": {
+          "商品名字": "a",
+          "商品英文": "a",
+          "商品价格": "200",
+          "使用的货币": "挖掘",
+          "购买时执行指令": [
             "give @a[name=[购买者]] stone ",
             "scoreboard players remove @a[name=\"[购买者]\"] [计分板] [购买价格]",
             "/tellraw @a {\"rawtext\":[{\"text\":\"购买成功 消费 [购买价格] 购买 石头 一个\"}]}"
           ],
-          "购买时检测指令":"testfor @a[name=[购买者],scores={[计分板]=[购买价格]..}]"	
+          "购买时检测指令": "testfor @a[name=[购买者],scores={[计分板]=[购买价格]..}]"
         },
-        "1":{
-          "商品名字":" ",
-          "商品英文":" ",
-          "商品价格":" ",
-          "使用的货币":" "
+        "1": {
+          "商品名字": " ",
+          "商品英文": " ",
+          "商品价格": " ",
+          "使用的货币": " "
         }
       }
-        
-      
     }
   }
 ]
