优化版雪球菜单
修改了公会组件
新添加优化版雪球菜单组件

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1877,5 +1877,64 @@
         }
       }
     }
+  },
+  {
+    "名称": "第三方_by温柔_优化版本雪球菜单组件",
+    "描述": "优化的雪球菜单",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Built-In",
+    "配置": {
+      "雪球菜单计分板":"snow",
+      "雪球菜单菜单显示以及对应积分":{
+        "1":"\n<各种传送点>\n切换生存\n立刻重生\n抬头确认\n低头取消",
+        "2":"\n各种传送点\n<切换生存>\n立刻重生\n抬头确认\n低头取消",
+        "3":"\n各种传送点\n切换生存\n<立刻重生>\n抬头确认\n低头取消",
+        "10":"\n<主城区域>\n生存一区",
+        "11":"\n主城区域\n<生存一区>"
+      },
+      "雪球菜单触发时的选择器":"@a[rx=-88]",
+      "雪球系统自动加分选择器(每500毫秒执行一次)":"@a",
+      "提醒 请自己实现雪球给玩家加分以及循环分数的功能 ":"提醒",
+      "系统检测周期(毫秒)":500,
+      "雪球菜单对应积分执行指令":{
+          "1":[
+            "title @a[name=[执行对象名字]] title 切换为传送点菜单",
+            "scoreboard players set @a[name=[执行对象名字]] [雪球菜单计分板] 9"
+          ],
+          "2":[
+            "tag @a[name=[执行对象名字],m=2] add omg冒险",
+            "tag @a[name=[执行对象名字],m=0] add omg生存",
+            "tag @a[name=[执行对象名字],m=1] add omg创造",
+            "gamemode 0 @a[name=[执行对象名字],tag=omg冒险]",
+            "gamemode 2 @a[name=[执行对象名字],tag=omg生存]",
+            "gamemode 0 @a[name=[执行对象名字],tag=omg创造]",
+            "title @a[name=[执行对象名字] title 切换模式成功",
+            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板]"
+          ],
+          "3":[
+            "title @a[name=[执行对象名字]] title 重生成功",
+            "kill @a[name=[执行对象名字]]",
+            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+          ],
+          "10":[
+            "title @a[name=[执行对象名字]] title 欢迎回到主城",
+            "tp @a[name=[执行对象名字]] 0 200 0",
+            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+          ],
+          "11":[
+            "title @a[name=[执行对象名字]] title 欢迎来到生存一区",
+            "tp @a[name=[执行对象名字]] 200 200 200",
+            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+          ]
+
+
+      },
+      "当分数等于前者时分数时自动跳转后者":{
+        "4":"1",
+        "12":"10"
+      }
+      
+    }
   }
 ]
