set to "是否禁用" to true by default

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1881,7 +1881,7 @@
   {
     "名称": "第三方_by温柔_优化版本雪球菜单组件",
     "描述": "优化的雪球菜单",
-    "是否禁用": false,
+    "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
