disable by default

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1749,7 +1749,7 @@
   {
     "名称": "第三方_by温柔_公会系统",
     "描述": "当前仅有公会排名还未完善 请不要使用 其余功能均可使用 如果有bug请在群里面@风也温柔",
-    "是否禁用": false,
+    "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
