--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1641,17 +1641,18 @@
     "名称": "统一导入系统",
     "描述": "Omega优化导入系统",
     "是否禁用": false,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "后台触发词": [
         "load",
         "导入"
       ],
-      "每秒导入普通方块数目": 600,
       "断点续导记录文件": "断点续导.json",
+      "每秒导入普通方块数目": 2000,
       "Omega启动时是否自动继续导入": true,
-      "忽略方块nbt信息": true
+      "忽略方块nbt信息": false,
+      "超频加速比":10
     }
   },
   {
