--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1959,5 +1959,20 @@
       }
       
     }
-  }
+  },
+  {
+    "名称": "统一导出系统",
+    "描述": "Omega统一导出系统",
+    "是否禁用": false,
+    "版本": "0.0.1",
+    "来源": "Built-In",
+    "配置": {
+      "Omega启动时是否自动继续导出": true,
+      "后台触发词": [
+        "save",
+        "导出"
+      ],
+      "断点续导记录文件": "导出_断点续导.json"
+    }
+  }  
 ]
