add new entry and adjust menu display

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1641,13 +1641,15 @@
     "名称": "统一导入系统",
     "描述": "Omega优化导入系统",
     "是否禁用": false,
-    "版本": "0.0.2",
+    "版本": "0.0.3",
     "来源": "Built-In",
     "配置": {
       "后台触发词": [
         "load",
         "导入"
       ],
+      "继续导入的触发词":["继续导入"],
+      "取消导入的触发词":["取消导入"],
       "断点续导记录文件": "断点续导.json",
       "每秒导入普通方块数目": 2000,
       "Omega启动时是否自动继续导入": true,
@@ -1964,10 +1966,12 @@
     "名称": "统一导出系统",
     "描述": "Omega统一导出系统",
     "是否禁用": false,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "Omega启动时是否自动继续导出": true,
+      "继续导出的触发词":["继续导出"],
+      "取消导出的触发词":["取消导出"],
       "后台触发词": [
         "save",
         "导出"
