basic of user id verification

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -569,7 +569,14 @@
       ],
       "触发词": [
         "give_stone"
-      ]
+      ],
+      "可使用者身份验证": {
+        "启用身份验证": true,
+        "依据名字": [
+          "2401PT",
+          "2402PT"
+        ]
+      }
     }
   },
   {
@@ -588,7 +595,11 @@
       ],
       "触发词": [
         "give_sand"
-      ]
+      ],
+      "可使用者身份验证": {
+        "启用身份验证": true,
+        "依据选择器": "@a[name=[player],m=c]"
+      }
     }
   },
   {
@@ -1242,7 +1253,11 @@
             "/tellraw [player] {\"rawtext\":[{\"text\":\"你已切换为生存模式，并被添加 tag，你输入的参数为 [args]\"}]}"
           ]
         }
-      ]
+      ],
+      "可使用者身份验证": {
+        "启用身份验证": true,
+        "依据选择器": "@a[name=[player],m=c]"
+      }
     }
   },
   {
@@ -1306,7 +1321,14 @@
             "/tellraw [player] {\"rawtext\":[{\"text\":\"tag ->a，你输入的参数为 [args]\"}]}"
           ]
         }
-      ]
+      ],
+      "可使用者身份验证": {
+        "启用身份验证": true,
+        "依据名字": [
+          "2401PT",
+          "2402PT"
+        ]
+      }
     }
   },
   {
@@ -1648,13 +1670,17 @@
         "load",
         "导入"
       ],
-      "继续导入的触发词":["继续导入"],
-      "取消导入的触发词":["取消导入"],
+      "继续导入的触发词": [
+        "继续导入"
+      ],
+      "取消导入的触发词": [
+        "取消导入"
+      ],
       "断点续导记录文件": "断点续导.json",
       "每秒导入普通方块数目": 2000,
       "Omega启动时是否自动继续导入": true,
       "忽略方块nbt信息": false,
-      "超频加速比":10
+      "超频加速比": 10
     }
   },
   {
@@ -1749,7 +1775,6 @@
     "来源": "Core",
     "配置": {}
   },
-  
   {
     "名称": "第三方_by温柔_优化版本雪球菜单组件",
     "描述": "优化的雪球菜单",
@@ -1757,56 +1782,53 @@
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
-      "雪球菜单计分板":"snow",
-      "雪球菜单菜单显示以及对应积分":{
-        "1":"\n<各种传送点>\n切换生存\n立刻重生\n抬头确认\n低头取消",
-        "2":"\n各种传送点\n<切换生存>\n立刻重生\n抬头确认\n低头取消",
-        "3":"\n各种传送点\n切换生存\n<立刻重生>\n抬头确认\n低头取消",
-        "10":"\n<主城区域>\n生存一区",
-        "11":"\n主城区域\n<生存一区>"
+      "雪球菜单计分板": "snow",
+      "雪球菜单菜单显示以及对应积分": {
+        "1": "\n<各种传送点>\n切换生存\n立刻重生\n抬头确认\n低头取消",
+        "2": "\n各种传送点\n<切换生存>\n立刻重生\n抬头确认\n低头取消",
+        "3": "\n各种传送点\n切换生存\n<立刻重生>\n抬头确认\n低头取消",
+        "10": "\n<主城区域>\n生存一区",
+        "11": "\n主城区域\n<生存一区>"
       },
-      "雪球菜单触发时的选择器":"@a[rx=-88]",
-      "雪球系统自动加分选择器(每500毫秒执行一次)":"@a",
-      "提醒 请自己实现雪球给玩家加分以及循环分数的功能 ":"提醒",
-      "系统检测周期(毫秒)":500,
-      "雪球菜单对应积分执行指令":{
-          "1":[
-            "title @a[name=[执行对象名字]] title 切换为传送点菜单",
-            "scoreboard players set @a[name=[执行对象名字]] [雪球菜单计分板] 9"
-          ],
-          "2":[
-            "tag @a[name=[执行对象名字],m=2] add omg冒险",
-            "tag @a[name=[执行对象名字],m=0] add omg生存",
-            "tag @a[name=[执行对象名字],m=1] add omg创造",
-            "gamemode 0 @a[name=[执行对象名字],tag=omg冒险]",
-            "gamemode 2 @a[name=[执行对象名字],tag=omg生存]",
-            "gamemode 0 @a[name=[执行对象名字],tag=omg创造]",
-            "title @a[name=[执行对象名字] title 切换模式成功",
-            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板]"
-          ],
-          "3":[
-            "title @a[name=[执行对象名字]] title 重生成功",
-            "kill @a[name=[执行对象名字]]",
-            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
-          ],
-          "10":[
-            "title @a[name=[执行对象名字]] title 欢迎回到主城",
-            "tp @a[name=[执行对象名字]] 0 200 0",
-            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
-          ],
-          "11":[
-            "title @a[name=[执行对象名字]] title 欢迎来到生存一区",
-            "tp @a[name=[执行对象名字]] 200 200 200",
-            "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
-          ]
-
-
+      "雪球菜单触发时的选择器": "@a[rx=-88]",
+      "雪球系统自动加分选择器(每500毫秒执行一次)": "@a",
+      "提醒 请自己实现雪球给玩家加分以及循环分数的功能 ": "提醒",
+      "系统检测周期(毫秒)": 500,
+      "雪球菜单对应积分执行指令": {
+        "1": [
+          "title @a[name=[执行对象名字]] title 切换为传送点菜单",
+          "scoreboard players set @a[name=[执行对象名字]] [雪球菜单计分板] 9"
+        ],
+        "2": [
+          "tag @a[name=[执行对象名字],m=2] add omg冒险",
+          "tag @a[name=[执行对象名字],m=0] add omg生存",
+          "tag @a[name=[执行对象名字],m=1] add omg创造",
+          "gamemode 0 @a[name=[执行对象名字],tag=omg冒险]",
+          "gamemode 2 @a[name=[执行对象名字],tag=omg生存]",
+          "gamemode 0 @a[name=[执行对象名字],tag=omg创造]",
+          "title @a[name=[执行对象名字] title 切换模式成功",
+          "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板]"
+        ],
+        "3": [
+          "title @a[name=[执行对象名字]] title 重生成功",
+          "kill @a[name=[执行对象名字]]",
+          "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+        ],
+        "10": [
+          "title @a[name=[执行对象名字]] title 欢迎回到主城",
+          "tp @a[name=[执行对象名字]] 0 200 0",
+          "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+        ],
+        "11": [
+          "title @a[name=[执行对象名字]] title 欢迎来到生存一区",
+          "tp @a[name=[执行对象名字]] 200 200 200",
+          "scoreboard players reset @a[name=[执行对象名字]] [雪球菜单计分板] "
+        ]
       },
-      "当分数等于前者时分数时自动跳转后者":{
-        "4":"1",
-        "12":"10"
+      "当分数等于前者时分数时自动跳转后者": {
+        "4": "1",
+        "12": "10"
       }
-      
     }
   },
   {
@@ -1817,13 +1839,17 @@
     "来源": "Built-In",
     "配置": {
       "Omega启动时是否自动继续导出": true,
-      "继续导出的触发词":["继续导出"],
-      "取消导出的触发词":["取消导出"],
+      "继续导出的触发词": [
+        "继续导出"
+      ],
+      "取消导出的触发词": [
+        "取消导出"
+      ],
       "后台触发词": [
         "save",
         "导出"
       ],
       "断点续导记录文件": "导出_断点续导.json"
     }
-  }  
+  }
 ]
