--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1851,5 +1851,17 @@
       ],
       "断点续导记录文件": "导出_断点续导.json"
     }
+  },
+  {
+    "名称": "服服互通",
+    "描述": "互通多个服务器的聊天栏",
+    "是否禁用": true,
+    "版本": "0.0. 1",
+    "来源": "Built-In",
+    "配置": {
+      "服务器名": "CMA",
+      "协议模式": "SuperScript@DotCS",
+      "中心服务器地址": "124.222.13.238:24012"
+    }
   }
 ]
