some bug fix on omega

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -556,7 +556,7 @@
     "名称": "简单自定义指令",
     "描述": "添加一个菜单项，被玩家激活时启用指定的指令",
     "是否禁用": false,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "功能描述": "给指定数量的石头(例子)  前往 omega_storage/配置/组件-简单自定义指令.json 配置",
@@ -583,7 +583,7 @@
     "名称": "简单自定义指令",
     "描述": "添加一个菜单项，被玩家激活时启用指定的指令",
     "是否禁用": false,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "功能描述": "给指定数量的沙子(例子)   前往 omega_storage/配置/组件-简单自定义指令.json 配置",
@@ -1204,7 +1204,7 @@
     "名称": "切换",
     "描述": "切换模式生存->冒险",
     "是否禁用": false,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "触发词": [
@@ -1264,7 +1264,7 @@
     "名称": "切换",
     "描述": "切换tag a->b->c->a",
     "是否禁用": true,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "触发词": [
@@ -1335,7 +1335,7 @@
     "名称": "切换",
     "描述": "带有参数的切换",
     "是否禁用": true,
-    "版本": "0.0.1",
+    "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
       "触发词": [
@@ -1663,9 +1663,10 @@
     "名称": "统一导入系统",
     "描述": "Omega优化导入系统",
     "是否禁用": false,
-    "版本": "0.0.3",
+    "版本": "0.0.4",
     "来源": "Built-In",
     "配置": {
+      "get指令的目标": "2401PT",
       "后台触发词": [
         "load",
         "导入"
