upgrade server to server chat room (adapt SuperScript@DotCS-V2 protocol)

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1857,12 +1857,19 @@
     "名称": "服服互通",
     "描述": "互通多个服务器的聊天栏",
     "是否禁用": true,
-    "版本": "0.0. 1",
+    "版本": "0.0.3",
     "来源": "Built-In",
     "配置": {
-      "服务器名": "CMA",
-      "协议模式": "SuperScript@DotCS",
-      "中心服务器地址": "124.222.13.238:24012"
+      "中心服务器地址": "124.222.13.238:24013",
+      "协议模式": "SuperScript@DotCS-V2",
+      "服务器名": "",
+      "特定协议附加数据": {
+        "SuperScript@DotCS-V2": {
+          "token": "",
+          "频道": "默认大区"
+        },
+        "SuperScript@DotCS": {}
+      }
     }
   }
 ]
