disable ranking by default

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1385,7 +1385,7 @@
   {
     "名称": "排行榜",
     "描述": "显示在线时间排行榜",
-    "是否禁用": false,
+    "是否禁用": true,
     "版本": "0.0.2",
     "来源": "Built-In",
     "配置": {
