new component, txt novel reader

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1874,5 +1874,38 @@
         "SuperScript@DotCS": {}
       }
     }
+  },
+  {
+    "名称": "小说阅读器",
+    "描述": "TXT小说阅读器",
+    "是否禁用": true,
+    "版本": "0.0.1",
+    "来源": "Built-In",
+    "配置": {
+      "进度记录和书签文件": "小说阅读器进度.json",
+      "小说文件夹": "小说",
+      "触发词": [
+        "读书",
+        "小说"
+      ],
+      "提示信息": "打开小说阅读器",
+      "显示选项": {
+        "书目页面题头": "§b§l书目===================================================",
+        "每页最多显示的书目数量": 2,
+        "书目渲染格式": "[I]: §l§6[书名]",
+        "书目清单开头": "§b§l输入 n 翻下页  | 前面没有更多啦 | 输入序号选择书 | 输入取消以退出",
+        "书目清单下一页": "§b§l输入 n 翻下页  | 输入 p 翻上页 | 输入序号选择书 | 输入取消以退出",
+        "书目清单结尾": "§b§l后面没有更多啦 | 输入 p 翻上页 | 输入序号选择书 | 输入取消以退出",
+        "每页最少显示字符数": 400,
+        "书内第一页": "§b§l输入 n 翻下页  | 前面没有更多啦 | 输入 m 打开书签 | 输入退出以保存 | [当前位置]/[总长度]",
+        "书内": "§b§l输入 n 翻下页  | 输入 p 翻上页 | 输入 m 打开书签 | 输入退出以保存 | [当前位置]/[总长度]",
+        "书内最后一页": "§b§l后面没有更多啦 | 输入 p 翻上页 | 输入 m 打开书签 | 输入退出以保存 | [当前位置]/[总长度]",
+        "使用ActionBar显示内容": true,
+        "没有书签时的提示": "§b§l输入 m 创建书签，或者输入 取消 以退出",
+        "有书签时提示": "§b§l输入 m 创建书签，输入序号以继续或者删除书签，或者输入 取消 以退出",
+        "书签显示格式": "§l[I]: [当前位置]/[总长度]\n§f[内容预览]",
+        "书签操作提示": "§b§l输入 r 跳转到书签，输入 d 移除书签"
+      }
+    }
   }
 ]
