this component is not efficient enough, so close it

--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -989,7 +989,7 @@
   {
     "名称": "违规昵称检测",
     "描述": "检测一个昵称是否违规",
-    "是否禁用": false,
+    "是否禁用": true,
     "版本": "0.0.1",
     "来源": "Built-In",
     "配置": {
