--- a/omega/mainframe/default_components.json
+++ b/omega/mainframe/default_components.json
@@ -1907,5 +1907,28 @@
         "书签操作提示": "§b§l输入 r 跳转到书签，输入 d 移除书签"
       }
     }
+  },
+  {
+    "名称": "皮肤检查",
+    "描述": "当发现指定的皮肤ID时执行指令",
+    "是否禁用": true,
+    "版本": "0.0.2",
+    "来源": "Built-In",
+    "配置": {
+      "忽略机器人": true,
+      "玩家上线时在后台显示皮肤名": true,
+      "匹配到皮肤名时则执行以下命令": {
+        ".CustomSlimac47bf16884b451cae9f32522b3a1285": [
+          "say 发现 [player] 使用和 240 同款皮肤",
+          "say 皮肤 ID [skinID]， 玩家 UUID [UUID]"
+        ],
+        ".Steve": [
+          "say 发现 [player] 使用史蒂夫皮肤"
+        ],
+        ".Alex": [
+          "say 发现 [player] 使用爱丽克丝皮肤"
+        ]
+      }
+    }
   }
 ]
